--- a/index.html
+++ b/index.html
@@ -3,27 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-    <header class="header">
 
+    <header class="header">
+      <div class="logo logo_place_header">
+      </div>
+      <h1 class="header__title"> Научиться учиться </h1>
+      <div class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="link" href="#">Узнать-></a>
+      </div>
+      <div class="header__link">
+      </div>
+      <div class="header__main-illustration"></div>
+      <div class="header__square-pic">
+      </div>
     </header>
+
     <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <h2 class="brief brief-title">Главные проблемы в обучении</h2>
+          <div class="main-text">
+            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <span class="span-accent"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
+            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <div class="paragraph"></div>
+          </div>
+        </div>
       </section>
 
       <section class="digits">
+        <h1 class="section-title">Цифры и факты</h1>
+        <h2 class="section-subtitle">Про учебу и мозг</h2>
+        <div class="table">
+          <div class="cell cell_theme_light">
+            <h3 class="heading">86 миллиардов </h3>
+            <p class="text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">2.1 миллиарда</h3>
+            <p class="text">Число нуждающихся в повышении квалификации</p>
+            <p>Всемирный Банк, 2017</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">1000 терабайт</h3>
+            <p class="text">Объём памяти человека</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">500 триллионов</h3>
+            <p class="text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">420 миллионов</h3>
+            <p class="text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p>Всемирный Банк, 2017</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">17–20 лет</h3>
+            <p class="text">Пик обучаемости</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">1885 год</h3>
+            <p class="text">Открытие кривой забывания</p>
+          </div>
+          <div class="cell cell_theme_light">
+            <h3 class="heading">1889 год</h3>
+            <p class="text">Открытие условного рефлекса</p>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
+        <h1 class="feynman-title">Метод Феймана</h1>
+        <h2 class="feynman-subtitle">Выучить и не забыть</h2>
+        <a class="link feynman-link" href="#">Подробнее -></a>
+        <div class="feynman-img"></div>
       </section>
 
       <section class="kaufman">
+        <h1 class="kaufman-title">Принципы обучения</h1>
+        <h2 class="kaufman-subtitle">от Джоша Кауфмана</h2>
+        <div class="table">
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">1</h3>
+            <p class="text">Выберите привлекательный проект.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">2</h3>
+            <p class="text">Сосредоточьтесь на каком-то одном навыке.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">3</h3>
+            <p class="text">Определите целевой уровень мастерства.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">4</h3>
+            <p class="text">Разбейте навык на элементы.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">5</h3>
+            <p class="text">Приготовьте всё необходимое для занятий.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">6</h3>
+            <p class="text">Устраните препятствия для занятий.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">7</h3>
+            <p class="text">Выделите специальное время для занятий.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">8</h3>
+            <p class="text">Создайте быстрые петли обратной связи.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">9</h3>
+            <p class="text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+          <div class="cell cell_theme_dark">
+            <h3 class="heading">10</h3>
+            <p class="text">Уделяйте внимание количеству и скорости.</p>
+          </div>
+          <div class="kaufman-triangle"> </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
+
+        
+      <div class="footer-column">
+        <div class="logo logo_place_footer"></div>
+        <div class="author"> bm </div>
+      </div>
+      
+      <div class="info">
+        <h3 class="column-heading">О Практикуме</h3>
+        <div class="column-links">
+          <div class="column-link">Главная</div>
+          <div class="column-link">Концепция</div>
+          <div class="column-link">Наставники</div>   
+        </div>
+      </div>
+
+      <div class="social"> 
+        <h3 class="column-heading">Соцсети</h3>
+        <div class="column-link">Facebook</div>
+        <div class="column-link">ВКонтакте</div>
+        <div class="column-link">Instagram</div>        
+      </div>
 
     </footer>
   </div>
