--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="header__title"> Научиться учиться </h1>
       <div class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="link" href="#">Узнать-></a>
+        <a class="link" href="#">Узнать &rarr;</a>
       </div>
       <div class="header__link">
       </div>
@@ -33,46 +33,45 @@
             <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <span class="span-accent"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
             <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-            <div class="paragraph"></div>
           </div>
         </div>
       </section>
 
       <section class="digits">
-        <h1 class="section-title">Цифры и факты</h1>
-        <h2 class="section-subtitle">Про учебу и мозг</h2>
+        <h1 class="section-title section-title_theme_light">Цифры и факты</h1>
+        <h2 class="section-subtitle section-subtitle_theme_light">Про учебу и мозг</h2>
         <div class="table">
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">86 миллиардов </h3>
             <p class="text">Число нейронов в мозге человека</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">2.1 миллиарда</h3>
             <p class="text">Число нуждающихся в повышении квалификации</p>
             <p>Всемирный Банк, 2017</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">1000 терабайт</h3>
             <p class="text">Объём памяти человека</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">500 триллионов</h3>
             <p class="text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">420 миллионов</h3>
             <p class="text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p>Всемирный Банк, 2017</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">17–20 лет</h3>
             <p class="text">Пик обучаемости</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">1885 год</h3>
             <p class="text">Открытие кривой забывания</p>
           </div>
-          <div class="cell cell_theme_light">
+          <div class="table__cell table__cell_theme_light">
             <h3 class="heading">1889 год</h3>
             <p class="text">Открытие условного рефлекса</p>
           </div>
@@ -82,83 +81,95 @@
       <section class="feynman">
         <h1 class="feynman-title">Метод Феймана</h1>
         <h2 class="feynman-subtitle">Выучить и не забыть</h2>
-        <a class="link feynman-link" href="#">Подробнее -></a>
+        <a class="link feynman-link" href="#">Подробнее &rarr;</a>
         <div class="feynman-img"></div>
       </section>
 
       <section class="kaufman">
-        <h1 class="kaufman-title">Принципы обучения</h1>
-        <h2 class="kaufman-subtitle">от Джоша Кауфмана</h2>
+        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+        <h2 class="section-title section-subtitle_theme_dark">от Джоша Кауфмана</h2>
         <div class="table">
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">1</h3>
             <p class="text">Выберите привлекательный проект.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">2</h3>
             <p class="text">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">3</h3>
             <p class="text">Определите целевой уровень мастерства.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">4</h3>
             <p class="text">Разбейте навык на элементы.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">5</h3>
             <p class="text">Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">6</h3>
             <p class="text">Устраните препятствия для занятий.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">7</h3>
             <p class="text">Выделите специальное время для занятий.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">8</h3>
             <p class="text">Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">9</h3>
             <p class="text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="cell cell_theme_dark">
+          <div class="table__cell table__cell_theme_dark">
             <h3 class="heading">10</h3>
             <p class="text">Уделяйте внимание количеству и скорости.</p>
           </div>
-          <div class="kaufman-triangle"> </div>
+          <div class="kaufman__triangle"> </div>
         </div>
       </section>
     </main>
-    <footer class="footer">
 
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_copyright">
+          <div class="logo logo_place_footer"></div>
+          <div class="footer__author">&copy;2019. Виктор Абанькин</div>
+        </div>
         
-      <div class="footer-column">
-        <div class="logo logo_place_footer"></div>
-        <div class="author"> bm </div>
-      </div>
-      
-      <div class="info">
-        <h3 class="column-heading">О Практикуме</h3>
-        <div class="column-links">
-          <div class="column-link">Главная</div>
-          <div class="column-link">Концепция</div>
-          <div class="column-link">Наставники</div>   
+        <div class="footer__column_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link" >Главная</a>
+            <a href="#" class="footer__column-link" >Концепция</a>
+            <a href="#" class="footer__column-link" >Наставники</a>   
+          </div>
+        </div>
+
+        <div class="footer__column_social"> 
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <div class="footer__column-links">
+              <a href="#" class="footer__column-link link_type_icon">
+                <div class="social-icon social-icon_name_facebook"></div>
+                Facebook
+              </a>
+              <a href="#" class="footer__column-link link_type_icon">
+                <div class="social-icon social-icon_name_vk"></div>
+                ВКонтакте
+              </a>
+              <a href="#" class="footer__column-link link_type_icon">
+                <div class="social-icon social-icon_name_instagram"></div>
+                Instagram
+              </a>
+            </div>
         </div>
       </div>
-
-      <div class="social"> 
-        <h3 class="column-heading">Соцсети</h3>
-        <div class="column-link">Facebook</div>
-        <div class="column-link">ВКонтакте</div>
-        <div class="column-link">Instagram</div>        
-      </div>
-
     </footer>
+
   </div>
 </body>
 </html>
