--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Проектная работа 1">
+  <meta name="keywords" content="html, css">
+  <meta name="author" content="mb">
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
@@ -16,9 +19,7 @@
       <h1 class="header__title"> Научиться учиться </h1>
       <div class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a class="link" href="#">Узнать &rarr;</a>
-      </div>
-      <div class="header__link">
+        <a class="header__link link" href="#">Узнать &rarr;</a>
       </div>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic">
@@ -28,11 +29,22 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="brief brief-title">Главные проблемы в обучении</h2>
-          <div class="main-text">
-            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <span class="span-accent"><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</span>
-            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          <h2 class="two-columns__brief brief-title">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
+              Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, 
+              чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка 
+              быстро выветривается и не приносит пользы.
+            </p>
+            <span class="two-columns__span-accent">
+              <b>Вывод:</b>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </span>
+            <p class="two-columns__paragraph">
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его 
+              эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
           </div>
         </div>
       </section>
@@ -42,47 +54,47 @@
         <h2 class="section-subtitle section-subtitle_theme_light">Про учебу и мозг</h2>
         <div class="table">
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">86 миллиардов </h3>
-            <p class="text">Число нейронов в мозге человека</p>
+            <h3 class="table__heading">86 миллиардов </h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">2.1 миллиарда</h3>
-            <p class="text">Число нуждающихся в повышении квалификации</p>
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
             <p>Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">1000 терабайт</h3>
-            <p class="text">Объём памяти человека</p>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">500 триллионов</h3>
-            <p class="text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">420 миллионов</h3>
-            <p class="text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p>Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">17–20 лет</h3>
-            <p class="text">Пик обучаемости</p>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">1885 год</h3>
-            <p class="text">Открытие кривой забывания</p>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell table__cell_theme_light">
-            <h3 class="heading">1889 год</h3>
-            <p class="text">Открытие условного рефлекса</p>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
-        <h1 class="feynman-title">Метод Феймана</h1>
-        <h2 class="feynman-subtitle">Выучить и не забыть</h2>
-        <a class="link feynman-link" href="#">Подробнее &rarr;</a>
-        <div class="feynman-img"></div>
+        <h1 class="feynman__title">Метод Феймана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть</h2>
+        <a class="feynman__link link" href="#">Подробнее &rarr;</a>
+        <div class="feynman__img"></div>
       </section>
 
       <section class="kaufman">
@@ -90,44 +102,44 @@
         <h2 class="section-title section-subtitle_theme_dark">от Джоша Кауфмана</h2>
         <div class="table">
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">1</h3>
-            <p class="text">Выберите привлекательный проект.</p>
+            <h3 class="table__heading">1</h3>
+            <p class="table__text">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">2</h3>
-            <p class="text">Сосредоточьтесь на каком-то одном навыке.</p>
+            <h3 class="table__heading">2</h3>
+            <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">3</h3>
-            <p class="text">Определите целевой уровень мастерства.</p>
+            <h3 class="table__heading">3</h3>
+            <p class="table__text">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">4</h3>
-            <p class="text">Разбейте навык на элементы.</p>
+            <h3 class="table__heading">4</h3>
+            <p class="table__text">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">5</h3>
-            <p class="text">Приготовьте всё необходимое для занятий.</p>
+            <h3 class="table__heading">5</h3>
+            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">6</h3>
-            <p class="text">Устраните препятствия для занятий.</p>
+            <h3 class="table__heading">6</h3>
+            <p class="table__text">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">7</h3>
-            <p class="text">Выделите специальное время для занятий.</p>
+            <h3 class="table__heading">7</h3>
+            <p class="table__text">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">8</h3>
-            <p class="text">Создайте быстрые петли обратной связи.</p>
+            <h3 class="table__heading">8</h3>
+            <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">9</h3>
-            <p class="text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <h3 class="table__heading">9</h3>
+            <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="heading">10</h3>
-            <p class="text">Уделяйте внимание количеству и скорости.</p>
+            <h3 class="table__heading">10</h3>
+            <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
           <div class="kaufman__triangle"> </div>
         </div>
