--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <div class="logo logo_place_header">
       </div>
       <h1 class="header__title"> Научиться учиться </h1>
-      <div class="header__subtitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link link" href="#">Узнать &rarr;</a>
-      </div>
+      </p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic">
       </div>
@@ -37,10 +37,10 @@
               чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка 
               быстро выветривается и не приносит пользы.
             </p>
-            <span class="two-columns__span-accent">
-              <b>Вывод:</b>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод:</span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </span>
+            </p>
             <p class="two-columns__paragraph">
               Конкретные техники и упражнения помогают изменить подход к обучению, сделать его 
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
@@ -50,95 +50,95 @@
       </section>
 
       <section class="digits">
-        <h1 class="section-title section-title_theme_light">Цифры и факты</h1>
-        <h2 class="section-subtitle section-subtitle_theme_light">Про учебу и мозг</h2>
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учебу и мозг</h3>
         <div class="table">
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">86 миллиардов </h3>
+          <div class="table__cell">
+            <h4 class="table__heading">86 миллиардов </h4>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">2.1 миллиарда</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
             <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p>Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">1000 терабайт</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
             <p class="table__text">Объём памяти человека</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">500 триллионов</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
             <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">420 миллионов</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
             <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p>Всемирный Банк, 2017</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">17–20 лет</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
             <p class="table__text">Пик обучаемости</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">1885 год</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
-          <div class="table__cell table__cell_theme_light">
-            <h3 class="table__heading">1889 год</h3>
+          <div class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">Метод Феймана</h1>
-        <h2 class="feynman__subtitle">Выучить и не забыть</h2>
+        <h2 class="feynman__title">Метод Феймана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
         <a class="feynman__link link" href="#">Подробнее &rarr;</a>
         <div class="feynman__img"></div>
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-        <h2 class="section-title section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <div class="table">
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">1</h3>
+            <h4 class="table__heading">1</h4>
             <p class="table__text">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">2</h3>
+            <h4 class="table__heading">2</h4>
             <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">3</h3>
+            <h4 class="table__heading">3</h4>
             <p class="table__text">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">4</h3>
+            <h4 class="table__heading">4</h4>
             <p class="table__text">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">5</h3>
+            <h4 class="table__heading">5</h4>
             <p class="table__text">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">6</h3>
+            <h4 class="table__heading">6</h4>
             <p class="table__text">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">7</h3>
+            <h4 class="table__heading">7</h4>
             <p class="table__text">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">8</h3>
+            <h4 class="table__heading">8</h4>
             <p class="table__text">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">9</h3>
+            <h4 class="table__heading">9</h4>
             <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading">10</h3>
+            <h4 class="table__heading">10</h4>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </div>
           <div class="kaufman__triangle"> </div>
@@ -148,37 +148,37 @@
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_copyright">
+        <div class="footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; 2019. Виктор Абанькин</div>
+          <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
         
-        <div class="footer__column_info">
+        <nav class="footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link" >Главная</a>
             <a href="#" class="footer__column-link" >Концепция</a>
             <a href="#" class="footer__column-link" >Наставники</a>   
           </div>
-        </div>
+        </nav>
 
-        <div class="footer__column_social"> 
+        <nav class="footer__column_content_social"> 
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
-              <a href="#" class="footer__column-link link_type_icon">
-                <div class="social-icon social-icon_name_facebook"></div>
+              <a href="#" class="footer__column-link footer__column-link_type_icon" target="_blank">
+                <div class="footer__social-icon social-icon_name_facebook"></div>
                 Facebook
               </a>
-              <a href="#" class="footer__column-link link_type_icon">
-                <div class="social-icon social-icon_name_vk"></div>
+              <a href="#" class="footer__column-link footer__column-link_type_icon" target="_blank">
+                <div class="footer__social-icon social-icon_name_vk"></div>
                 ВКонтакте
               </a>
-              <a href="#" class="footer__column-link link_type_icon">
-                <div class="social-icon social-icon_name_instagram"></div>
+              <a href="#" class="footer__column-link footer__column-link_type_icon" target="_blank">
+                <div class="footer__social-icon social-icon_name_instagram"></div>
                 Instagram
               </a>
             </div>
-        </div>
+          </nav>
       </div>
     </footer>
 
