--- a/index.html
+++ b/index.html
@@ -141,19 +141,20 @@
             <h4 class="table__heading">10</h4>
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
-          <li class="kaufman__triangle"> </li>
+          
         </ul>
+        <div class="kaufman__triangle"> </div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
         
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <div class="footer__column-links">
             <a href="#" class="footer__column-link" >Главная</a>
@@ -162,19 +163,19 @@
           </div>
         </nav>
 
-        <nav class="footer__column_content_social"> 
+        <nav class="footer__column footer__column_content_social"> 
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-links">
               <a href="#" class="footer__column-link footer__column-link_type_icon" target="_blank">
-                <div class="footer__social-icon social-icon_name_facebook"></div>
+                <div class="footer__social-icon footer__social-icon_name_facebook"></div>
                 Facebook
               </a>
               <a href="#" class="footer__column-link footer__column-link_type_icon" target="_blank">
-                <div class="footer__social-icon social-icon_name_vk"></div>
+                <div class="footer__social-icon footer__social-icon_name_vk"></div>
                 ВКонтакте
               </a>
               <a href="#" class="footer__column-link footer__column-link_type_icon" target="_blank">
-                <div class="footer__social-icon social-icon_name_instagram"></div>
+                <div class="footer__social-icon footer__social-icon_name_instagram"></div>
                 Instagram
               </a>
             </div>
