--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="description" content="Проектная работа 1">
   <meta name="keywords" content="html, css">
   <meta name="author" content="mb">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -29,7 +28,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <h2 class="two-columns__brief brief-title">Главные проблемы в обучении</h2>
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
