#Update - Block video

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="header__link" href="#">Узнать &rarr;</a>
       </p>
       <div class="header__main-illustration"></div>
-      <div class="header__square-pic">
+      <div class="header__square-pic rotation">
       </div>
     </header>
 
@@ -47,6 +47,78 @@
           </div>
         </div>
       </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <div class="cards">
+
+          <div class="cards__item">
+            <div class="cards__image cards__image_name_attention"></div>
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное 
+              и рассеянное мышление.</p>
+          </div>
+
+          <div class="cards__item">
+            <div class="cards__image cards__image_name_recall"></div>
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные 
+              порции памяти.</p>
+          </div>
+
+          <div class="cards__item">
+            <div class="cards__image cards__image_name_interliving"></div>
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг 
+              друга.</p>
+          </div>
+
+          <div class="cards__item">
+            <div class="cards__image cards__image_name_question"></div>
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который 
+              вас действительно волнует.</p>
+          </div>
+
+          <div class="cards__item">
+            <div class="cards__image cards__image_name_competence"></div>
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только 
+              кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="iframes">
+          <div class="iframes__iframe">
+            <iframe width="515" 
+              height="316" 
+              src="https://www.youtube.com/embed/5MgBikgcWnY" 
+              title="YouTube video player" frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen></iframe>
+          </div>
+          
+          <div class="iframes__iframe">
+            <iframe width="515" 
+              height="316"
+              src="https://www.youtube.com/embed/arj7oStGLkU" 
+              title="YouTube video player" 
+              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+            </iframe>
+          </div>
+
+        </div>
+
+      </section>
+
+
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
