--- a/index.html
+++ b/index.html
@@ -95,24 +95,17 @@
         <h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="iframes">
-          <div class="iframes__iframe">
-            <iframe width="515" 
-              height="316" 
+            <iframe class="iframes__iframe" 
               src="https://www.youtube.com/embed/5MgBikgcWnY" 
-              title="YouTube video player" frameborder="0" 
+              title="YouTube video player" 
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
               allowfullscreen></iframe>
-          </div>
-
-          <div class="iframes__iframe">
-            <iframe width="515" 
-              height="316"
+   
+            <iframe class="iframes__iframe" 
               src="https://www.youtube.com/embed/arj7oStGLkU" 
               title="YouTube video player" 
-              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen>
-            </iframe>
-          </div>
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen></iframe>
         </div>
       </section>
 
