--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul class="cards">
 
           <li class="cards__item">
-            <img src="../../../../images/cards-attention.png" 
+            <img src="images/cards-attention.png" 
               alt="Обложка Два вида внимания" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное 
@@ -62,7 +62,7 @@
             </li>
 
           <li class="cards__item">
-            <img src="../../../../images/cards-recall.png" 
+            <img src="images/cards-recall.png" 
               alt="Обложка Recall" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные 
@@ -70,7 +70,7 @@
             </li>
 
           <li class="cards__item">
-            <img src="../../../../images/cards-interliving.png" 
+            <img src="images/cards-interliving.png" 
               alt="Обложка Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг 
@@ -78,7 +78,7 @@
             </li>
 
           <li class="cards__item">
-            <img src="../../../../images/cards-question.png" 
+            <img src="images/cards-question.png" 
               alt="Обложка Вопросы" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который 
@@ -86,7 +86,7 @@
             </li>
 
           <li class="cards__item">
-            <img src="../../../../images/cards-competence.png" 
+            <img src="images/cards-competence.png" 
               alt="Обложка Иллюзия компетентности" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только 
@@ -194,7 +194,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
 
           <div class="khan__book-container">
-            <img src="../../../images/khan-book.jpg" alt="Обложка книги" class="khan__book-pic">
+            <img src="images/khan-book.jpg" alt="Обложка книги" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -254,19 +254,19 @@
         
         <div class="resources__logo-zone">
           <a href="#" class="resources__link">
-            <img src="../../../../images/logo/resources-arzamas.svg" 
+            <img src="images/logo/resources-arzamas.svg" 
               alt="Логотип Арзамас" class="resources__logo">
           </a>
           <a href="#" class="resources__link">
-            <img src="../../../../images/logo/resources-n1.svg" 
+            <img src="images/logo/resources-n1.svg" 
               lt="Логотип N+1" class="resources__logo">
           </a>
           <a href="#" class="resources__link">
-            <img src="../../../../images/logo/resources-strelka.svg" 
+            <img src="images/logo/resources-strelka.svg" 
               alt="Логотип Стрелка" class="resources__logo">
           </a>
           <a href="#" class="resources__link">
-            <img src="../../../../images/logo/resources-polka.svg" 
+            <img src="images/logo/resources-polka.svg" 
               alt="Логотип Полка" class="resources__logo">
           </a>
           
