--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main class="content">
       <section class="description">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -45,7 +45,7 @@
               эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </article>
+        </div>
       </section>
 
       <section class="techniques">
@@ -115,7 +115,7 @@
       </section>
 
       <section class="oakley">
-        <article class="two-columns">
+        <div class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -127,7 +127,7 @@
               кому всё ясно с первого взгляда.
             </p>
           </div>
-        </article>
+        </div>
       </section>
 
       <section class="feynman">
@@ -259,7 +259,7 @@
           </a>
           <a href="#" class="resources__link">
             <img src="images/logo/resources-n1.svg" 
-              lt="Логотип N+1" class="resources__logo">
+              alt="Логотип N+1" class="resources__logo">
           </a>
           <a href="#" class="resources__link">
             <img src="images/logo/resources-strelka.svg" 
